Corrected the tex file and a bit of the main.py

--- a/ligma.tex
+++ b/ligma.tex
@@ -15,7 +15,7 @@ ${u} = \begin{pmatrix}
 \end{pmatrix}$ \quad \quad
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-\# & $\omega_{1}^e$ & $\theta_{1}^e$ & $\omega_{2}^e$ & $\theta_{2}^e$ \\ \hline
+\ N\textsuperscript{\underline{\scriptsize o}} & $\omega_{1}^e$ & $\theta_{1}^e$ & $\omega_{2}^e$ & $\theta_{2}^e$ \\ \hline
 1 & 1  & 2 & 3 & 4  \\ \hline
 2 & 3 & 4 & 5 & 6 \\ \hline
 \end{tabular}
